[project]
name = "utilityhub-workspace"
version = "0.0.0"
description = "Development workspace for the UtilityHub ecosystem. Not a publishable package."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Rajesh Das", email = "rajesh@hyperoot.dev" }]
dependencies = [
    "mkdocstrings[python]>=1.0.3",
    "utilityhub",
    "utilityhub_config",
    "zensical>=0.0.32",
]

[tool.uv.sources]
utilityhub = { workspace = true }
utilityhub_config = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pymdown-extensions>=10.19.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.10",
    "ty>=0.0.7",
]
