[project]
name = "utilityhub-workspace"
version = "0.0.0"
description = "Development workspace for the UtilityHub ecosystem. Not a publishable package."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Rajesh Das", email = "rajesh@hyperoot.dev" }]
dependencies = [
    "mkdocstrings[python]>=1.0.4",
    "utilityhub",
    "utilityhub_config",
    "zensical>=0.0.45",
]

[tool.uv.sources]
utilityhub = { workspace = true }
utilityhub_config = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pymdown-extensions>=10.21.3",
    "pytest>=9.1.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.17",
    "ty>=0.0.49",
]
